<resources>
    <string name="app_name">Learners</string>
    <string name="aryabhatta_knowledge_university">Aryabhatta Knowledge University</string>
    <string name="graduate_aptitude_test_in_engineering">Graduate Aptitude Test in Engineering</string>
    <string name="welcome_learners_here_all_things_are_available_for_lear_about">Welcome learners, here all things are available for learn about :</string>
    <string name="semester_2">SEMESTER 2</string>
    <string name="semester_1">SEMESTER 1</string>
    <string name="semester_3">SEMESTER 3</string>
    <string name="semester_4">SEMESTER 4</string>
    <string name="semester_5">SEMESTER 5</string>
    <string name="semester_6">SEMESTER 6</string>
    <string name="semester_7">SEMESTER 7</string>
    <string name="semester_8">SEMESTER 8</string>
    <string name="chemistry">CHEMISTRY</string>
    <string name="mathematics_i_calculus_and_limear_algebra">MATHEMATICS-I (CALCULUS AND LIMEAR ALGEBRA)</string>
    <string name="programing_for_problem_solving">PROGRAMING FOR PROBLEM SOLVING</string>
    <string name="workshop_manufacturing_practice">WORKSHOP MANUFACTURING PRACTICE</string>
    <string name="english">ENGLISH</string>
    <string name="physics_semiconductor_physics">PHYSICS (SEMICONDUCTOR PHYSICS)</string>
    <string name="mathematics_ii_probability_and_statics">MATHEMATICS-II(PROBABILITY AND STATICS)</string>
    <string name="basic_electrical_engineering">BASIC ELECTRICAL ENGINEERING</string>
    <string name="engineering_graphics_and_design">ENGINEERING GRAPHICS AND DESIGN</string>
    <string name="discrete_mathematical_structure_and_graph_theory">DISCRETE MATHEMATICAL STRUCTURE AND GRAPH THEORY</string>
    <string name="analog_electronics">ANALOG ELECTRONICS</string>
    <string name="data_structures">DATA STRUCTURES</string>
    <string name="computer_architecture">COMPUTER ARCHITECTURE</string>
    <string name="systems_programming">SYSTEMS PROGRAMMING</string>
    <string name="organizational_behaviour_and_industrial_psychology">ORGANIZATIONAL BEHAVIOUR AND INDUSTRIAL PSYCHOLOGY</string>
    <string name="analog_electronic_circuits">Analog Electronic Circuits</string>
    <string name="data_structure_and_algorithm">Data Structure and Algorithm</string>
    <string name="object_oriented_programming_using_c">Object Oriented Programming using C++</string>
    <string name="mathematics_iii_differential_calculus">Mathematics-III (Differential Calculus)</string>
    <string name="technical_writing">Technical Writing</string>
    <string name="summer_industry_internship_1">Summer Industry Internship - 1</string>
    <string name="microprocessor_and_its_applications">MICROPROCESSOR AND ITS APPLICATIONS</string>
    <string name="design_analysis_of_algorithms"><![CDATA[DESIGN & ANALYSIS OF ALGORITHMS]]></string>
    <string name="introduction_to_java_programming_language">INTRODUCTION TO JAVA PROGRAMMING LANGUAGE</string>
    <string name="database_systems">DATABASE SYSTEMS</string>
    <string name="operating_systems">OPERATING SYSTEMS</string>
    <string name="computer_networks">COMPUTER NETWORKS</string>
    <string name="object_oriented_analysis_design"><![CDATA[OBJECT ORIENTED ANALYSIS & DESIGN]]></string>
    <string name="principles_of_programming_languages">PRINCIPLES OF PROGRAMMING LANGUAGES</string>
    <string name="formal_languages_automata_theory"><![CDATA[FORMAL LANGUAGES & AUTOMATA THEORY]]></string>
    <string name="industrial_economics_accountancy"><![CDATA[INDUSTRIAL ECONOMICS & ACCOUNTANCY]]></string>
    <string name="software_engineering">SOFTWARE ENGINEERING</string>
    <string name="web_applications_design_development"><![CDATA[WEB APPLICATIONS DESIGN & DEVELOPMENT]]></string>
    <string name="compiler_design">COMPILER DESIGN</string>
    <string name="distributed_computing">DISTRIBUTED COMPUTING</string>
    <string name="personal_management_industrial_relation"><![CDATA[PERSONAL MANAGEMENT & INDUSTRIAL RELATION]]></string>
    <string name="information_security">INFORMATION SECURITY</string>
    <string name="elective_iv">ELECTIVE-IV</string>
    <string name="elective_v">ELECTIVE-V</string>
    <string name="elective_vi">ELECTIVE-VI</string>
    <string name="project_ii">PROJECT – II</string>
    <string name="industrial_training">INDUSTRIAL TRAINING</string>
    <string name="project_i">PROJECT – I</string>
    <string name="elective_iii">ELECTIVE-III</string>
    <string name="elective_ii">ELECTIVE-II</string>
    <string name="elective_i">ELECTIVE-I</string>
    <string name="artificial_intelligence">ARTIFICIAL INTELLIGENCE</string>
    <string name="data_mining">DATA MINING</string>
    <string name="nothing_provided_by_aku">NOTHING PROVIDED BY AKU</string>

    <string name="bachelor_of_technology_in_computer_science_engineering"><![CDATA[BACHELOR OF TECHNOLOGY IN COMPUTER SCIENCE & ENGINEERING]]></string>
    <string name="b_tech_cse_elective">B.TECH. (CSE) ELECTIVE*</string>
    <string name="course_code">Course code</string>
    <string name="t">T</string>
    <string name="p">P</string>
    <string name="credits">Credits</string>
    <string name="course_title">Course title</string>
    <string name="l">L</string>
    <string name="_051_x_25">051 X 25</string>
    <string name="_051_x_27">051 X 27</string>
    <string name="_011_x_34">011 X 34</string>
    <string name="_041_x_67">041 X 67</string>
    <string name="_041_x_65">041 X 65</string>
    <string name="_041_x_10">041 X 10</string>
    <string name="_041_x_06">041 X 06</string>
    <string name="_011_x_31">011 X 31</string>
    <string name="_011_x_02">011 X 02</string>
    <string name="_011_x_28">011 X 28</string>
    <string name="_011_x_23">011 X 23</string>
    <string name="_051_x_42">051 X 42</string>
    <string name="_051_x_41">051 X 41</string>
    <string name="_051_x_31">051 X 31</string>
    <string name="_051_x_30">051 X 30</string>
    <string name="_051_x_28">051 X 28</string>
    <string name="_0">0</string>
    <string name="_041_x_70">041 X 70</string>
    <string name="fundamentals_of_data_communication">FUNDAMENTALS OF DATA COMMUNICATION</string>
    <string name="_051_x_02">051 X 02</string>
    <string name="_051_x_18">051 X 18</string>
    <string name="_3">3</string>
    <string name="_051_x_12">051 X 12</string>
    <string name="mobile_wireless_computing"><![CDATA[MOBILE & WIRELESS COMPUTING]]></string>
    <string name="_051_x_22">051 X 22</string>
    <string name="distributed_database">DISTRIBUTED DATABASE</string>
    <string name="_041_x_74">041 X 74</string>
    <string name="performance_evaluation_of_computer_systems">PERFORMANCE EVALUATION OF COMPUTER SYSTEMS</string>
    <string name="_051_x_26">051 X 26</string>
    <string name="advance_computer_architecture">ADVANCE COMPUTER ARCHITECTURE</string>
    <string name="parallel_computing">PARALLEL COMPUTING</string>
    <string name="_051_x_23">051 X 23</string>
    <string name="optimization_theory">OPTIMIZATION THEORY</string>
    <string name="_041_x_71">041 X 71</string>
    <string name="_041_x_75">041 X 75</string>
    <string name="_041_x_76">041 X 76</string>
    <string name="_041_x_80">041 X 80</string>
    <string name="real_time_systems">REAL TIME SYSTEMS</string>
    <string name="_051_x_32">051 X 32</string>
    <string name="_051_x_35">051 X 35</string>
    <string name="_051_x_19">051 X 19</string>
    <string name="cryptography">CRYPTOGRAPHY</string>
    <string name="speech_processing">SPEECH PROCESSING</string>
    <string name="pattern_recognition">PATTERN RECOGNITION</string>
    <string name="genetic_algorithm">GENETIC ALGORITHM</string>
    <string name="natural_language_processing">NATURAL LANGUAGE PROCESSING</string>
    <string name="computational_geometry">COMPUTATIONAL GEOMETRY</string>
    <string name="computer_graphics">COMPUTER GRAPHICS</string>
    <string name="neural_networks_its_applications"><![CDATA[NEURAL NETWORKS & ITS APPLICATIONS]]></string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_041_x_02">04 1x02</string>
    <string name="microcontrolle_rs">MICROCONTROLLE RS</string>
    <string name="microelectronic_s_ic_design_fabrication"><![CDATA[MICROELECTRONIC S – IC DESIGN & FABRICATION]]></string>
    <string name="digital_signal_processing">DIGITAL SIGNAL PROCESSING</string>
    <string name="intelligent_instruments">INTELLIGENT INSTRUMENTS</string>
    <string name="introduction_to_communication_systems">INTRODUCTION TO COMMUNICATION SYSTEMS</string>
    <string name="computer_aided_design">COMPUTER AIDED DESIGN</string>
    <string name="geographical_information_systems_remote_sensing"><![CDATA[GEOGRAPHICAL INFORMATION SYSTEMS & REMOTE SENSING]]></string>
    <string name="robotics_and_robot_applications">ROBOTICS AND ROBOT APPLICATIONS</string>
    <string name="_04_1x_03">04 1x03</string>
    <string name="_04_1x67">04 1x67</string>
    <string name="digital_image_processing">DIGITAL IMAGE PROCESSING</string>
    <string name="operations_research">OPERATIONS RESEARCH</string>
    <string name="_04_1x70">04 1x70</string>
    <string name="embedded_system_design">EMBEDDED SYSTEM DESIGN</string>
    <string name="vlsi_design">VLSI DESIGN</string>
    <string name="digital_communication_telecommunication_management"><![CDATA[DIGITAL COMMUNICATION & TELECOMMUNICATION MANAGEMENT]]></string>
    <string name="nanotechnology_its_applications"><![CDATA[NANOTECHNOLOGY & ITS APPLICATIONS]]></string>
    <string name="fiber_optics_networking_technology"><![CDATA[FIBER OPTICS & NETWORKING TECHNOLOGY]]></string>
    <string name="_04_1x76">04 1x76</string>
    <string name="mobile_computing">MOBILE COMPUTING</string>
    <string name="visual_programming">VISUAL PROGRAMMING</string>
    <string name="intrusion_detection">INTRUSION DETECTION</string>
    <string name="_06_1x04">06 1x04</string>
    <string name="_06_1x08">06 1x08</string>
    <string name="_06_1x09">06 1x09</string>
    <string name="xml_web_services">XML WEB SERVICES</string>
    <string name="multimedia_technology_its_applications"><![CDATA[MULTIMEDIA TECHNOLOGY & ITS APPLICATIONS]]></string>
    <string name="network_security">NETWORK SECURITY</string>
    <string name="_06_1x10">06 1x10</string>
    <string name="_06_1x13">06 1x13</string>
    <string name="internet_intranet_engineering"><![CDATA[INTERNET & INTRANET ENGINEERING]]></string>
    <string name="e_commerce_erp"><![CDATA[E – COMMERCE & ERP]]></string>
    <string name="image_processing_gis"><![CDATA[IMAGE PROCESSING & GIS]]></string>
    <string name="_06_1x17">06 1x17</string>
    <string name="_06_1x18">06 1x18</string>
    <string name="_06_1x19">06 1x19</string>
    <string name="note_please_click_the_course_title_to_get_syllabus">NOTE :- Please click the Course title to get Syllabus.</string>
    <string name="computer_aided_design_manufacturing"><![CDATA[COMPUTER AIDED DESIGN & MANUFACTURING]]></string>
    <string name="syllabus">SYLLABUS</string>
    <string name="book">BOOK</string>
    <string name="gate_2020">GATE 2020</string>

</resources>
